--- a/React_Initial/src/client/app/index.html
+++ b/React_Initial/src/client/app/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <!-- 欲插入 React Component 的位置 -->
-    <div id="app"></div>
+    <div id="hello"></div>
+    <div id="myComponent"></div>
+    <div id="timer"></div>
+    <div id="todoApp"></div>
 </body>
 </html>
