--- a/React_Initial/src/client/app/index.html
+++ b/React_Initial/src/client/app/index.html
@@ -4,38 +4,46 @@
     <meta charset="UTF-8">
     <title>React Setup</title>
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 	<script src="https://cdn.jsdelivr.net/remarkable/1.6.2/remarkable.min.js"></script>
 </head>
 <body>
 <div class="container">
     <!-- 欲插入 React Component 的位置 -->
-    <div class="panel panel-primary col-xs-6 col-md-3">
+    <div class="panel panel-primary col-md-12">
     <div class="panel-heading">Hello Test</div>
     <div class="panel-body" id="hello"></div>
     </div>
-    <div class="panel panel-primary col-xs-6 col-md-3">
+    <div class="panel panel-primary col-md-12">
     <div class="panel-heading">myComponent</div>
     <div class="panel-body" id="myComponent"></div>
     </div>
-    <div class="panel panel-primary col-xs-6 col-md-3">
+    <div class="panel panel-primary col-md-12">
     <div class="panel-heading">timer</div>
     <div class="panel-body" id="timer"></div>
     </div>
 
-    <div class="panel panel-primary col-xs-6 col-md-3">
+    <div class="panel panel-primary col-md-12">
     <div class="panel-heading">todoApp</div>
     <div class="panel-body" id="todoApp"></div>
     </div>
-    <div class="panel panel-primary col-xs-6 col-md-3">
+    <div class="panel panel-primary col-md-12">
     <div class="panel-heading">markdownTest</div>
     <div class="panel-body" id="markdownTest"></div>
     </div>
 
-    <div class="panel panel-primary col-xs-6 col-md-3">
+    <div class="panel panel-primary col-md-12">
     <div class="panel-heading">LifeCycleTest</div>
     <div class="panel-body">
         <button id="lifeCycleTest" type="button" class="btn btn-default btn-lg">
         </button>
+    </div>
+    </div>
+
+    <div class="panel panel-primary col-md-12">
+    <div class="panel-heading">AsyncTest</div>
+    <div class="panel-body">
+        <div id = 'asyncTest'></div>
     </div>
     </div>
 </div>    
